--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.7.0",
+    "apollo-server": "^3.10.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "graphql": "^16.5.0",
+    "graphql": "^16.6.0",
     "mongoose": "^6.3.3"
   }
 }
